[package]
name = "usage"
version = "0.1.0"
edition = "2021"
authors = ["evanr70"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.25", features = ["derive"] }
cursive = { version = "0.20.0", features = ["termion", "crossterm", "crossterm-backend"] }
passwd = "0.0.1"
rand = "0.8.5"
sysinfo = "0.26.7"
